--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-flash": "0.0.2",
+    "express-flash": "^0.0.2",
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
     "pg": "^8.7.1",
